--- a/src/main/resources/static/swagger-ui/index.html
+++ b/src/main/resources/static/swagger-ui/index.html
@@ -34,7 +34,7 @@
         if(typeof initOAuth == "function") {
           /*
           initOAuth({
-            clientId: "your-client-id",
+            clientId: "your-client-pollId",
             realm: "your-realms",
             appName: "your-app-name"
           });
